<resources>
    <string name="app_name">Exclusave</string>
    <string name="arabic">Arabic</string>
    <string name="username" translatable="false">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="forgetPassword">Forgot Password</string>
    <string name="savePassword">SAVE PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="newUserRegisterNow">NEW USER ? REGISTER NOW !</string>
    <string name="viewAsGuest">VIEW AS GUEST</string>
    <string name="cardNumber">CARD NUMBER</string>
    <string name="emailAddress">EMAIL ADDRESS</string>
    <string name="city">CITY</string>
    <string name="cardType">CARD TYPE</string>
    <string name="uploadID">UPLOAD ID (BUSSINESS, EMPLOYEE, STUDENTS)</string>
    <string name="promoCode">PROMO CODE</string>
    <string name="Apply">APPLY</string>
    <string name="amount">AMOUNT</string>
    <string name="ihaveReadAndAgreed">I have read and agreed to the <a href="http://www.exclusavecard.com/faq.html">Terms &amp; Conditions</a> and the <a href="http://www.exclusavecard.com/faq.html">Privacy Policy</a></string>
    <string name="payment">PAYMENT</string>
    <string name="middle">MIDDLE NAME</string>
    <string name="last">LAST NAME</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="yourNextReward">YOUR NEXT REWARD</string>
    <string name="complainInstead">Complain Instead</string>
    <string name="submit">SUBMIT</string>
    <string name="done">DONE</string>
    <string name="profile">PROFILE</string>
    <string name="personalInforamtion">PERSONAL INFORAMTION</string>
    <string name="renew">RENEW</string>
    <string name="family" translatable="false">FAMILY</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="EnterFirstName">Enter First Name</string>
    <string name="InvalidEmail">Invalid Email Address</string>
    <string name="InvalidPhone">Invalid Phone Number</string>
    <string name="PleaseSelectYourCity">Select City</string>
    <string name="bookNow">BOOK NOW</string>
    <string name="filters">FILTERS</string>
    <string name="history">HISTORY</string>
    <string name="clearAll">CLEAR ALL</string>
    <string name="EnterUsername" translatable="false">Enter Username</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="confirmPassword">CONFIRM PASSWORD</string>
    <string name="pleaseEnterPassword">Please Enter Password</string>
    <string name="pleaseEnterConfirmPassword">Please Enter Confirm Password</string>
    <string name="passwordsDontMatch">Passwords Dont Match</string>
    <string name="forgotPassword">FORGOT PASSWORD</string>
    <string name="logout_string">Are you sure you want to Logout?</string>
    <string name="checkEmptySpaces">Please remove empty spaces</string>
    <string name="PleaseLogin">Sorry! You are a guest please register to enjoy the benefits of Exclusave</string>
    <string name="favourites">FAVORITES</string>
    <string name="selectCities">Select Cities</string>
    <string name="selectCategories">Select Categories</string>
    <string name="select_sub_categories">Select Sub Categories</string>
    <string name="pleaseEnterPromoCode">Please enter promo code</string>
    <string name="annoucement">ANNOUNCEMENT:</string>
    <string name="dateofvisit">DATE OF VISIT:</string>
    <string name="timeprefered">TIME PREFERED:</string>
    <string name="numberofguests">NUMBER OF GUESTS:</string>
    <string name="change_profile_string">Are your sure you want to switch to the other profile?</string>
    <string name="cardNumberIfAvailable">CARD NUMBER IF AVAILABLE</string>
    <string name="emaildigits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789.@</string>
    <string name="search_marchents">Search Merchants</string>
    <string name="contactUs">CONTACT US</string>
    <string name="gotAQuickQuestion">GOT A QUICK QUESTION?</string>
    <string name="giveUsACall">GIVE US A CALL</string>
    <string name="gotAbriefSuggestionOrInquiry">GOT A SUGGESTION OR INQUIRY?</string>
    <string name="chatWithUs">CHAT WITH US</string>
    <string name="forBusinessInquiries">FOR BUSINESS INQUIRIES</string>
    <string name="sendUsAnEmail">SEND US AN EMAIL</string>
    <string name="locationrequest">Please enable location permission first!</string>
    <string name="noNotificationsAvailable">No new notifications.</string>
    <string name="frequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="termsAndConditions">Terms and Conditions</string>
    <string name="aboutUs">ABOUT US</string>
    <string name="select">SELECT</string>
    <string name="noOfGuests">No. Of Guests</string>
    <string name="specialRequest">Special Request</string>
    <string name="sendRequest">Send Request</string>
    <string name="typeAMessage">TYPE A MESSAGE</string>
    <string name="send">Send</string>
    <string name="youDontHaveAnyFavs">You dont have any favorites.</string>
    <string name="cities">Cities</string>
    <string name="categories">Categories</string>
    <string name="subcategories">Sub Categories</string>
    <string name="sortBy">Sort By</string>
    <string name="az">A : Z</string>
    <string name="discount">Discount</string>
    <string name="popular">Popular</string>
    <string name="noStoresfound">No stores found.</string>
    <string name="email">EMAIL</string>
    <string name="NAME">NAME</string>
    <string name="dob">D.O.B</string>
    <string name="phoneNumber">PHONE NUMBER</string>
    <string name="interests">INTERESTS</string>
    <string name="companyName">COMPANY NAME</string>
    <string name="idBusinessEmployeeStudent">ID (BUSINESS, EMPLOYEE, STUDENT)</string>
    <string name="gender">GENDER</string>
    <string name="noMerchantsFound">No merchants found.</string>
    <string name="updateYourCompanyName">Update Your Company Name</string>
    <string name="Update">Update</string>
    <string name="updateYourDOB">Update Your D.O.B</string>
    <string name="updateFamilyDOB">Update Family Member D.O.B</string>
    <string name="updateGender">Update Gender</string>
    <string name="updateYourInterest">Update Your Interest</string>
    <string name="selectInterest">Select Interest</string>
    <string name="updateYourName">Update Your Name</string>
    <string name="FirstName">F. NAME</string>
    <string name="LastName">L. NAME</string>
    <string name="MiddleName">M. NAME</string>
    <string name="updateYourPhoneNumber">Update Your Phone Number</string>
    <string name="updateYourFamilyPhoneNumber">Update Your Family Phone Number</string>
    <string name="myPoints">MY POINTS</string>
    <string name="mySavings">MY SAVINGS</string>
    <string name="recommendedOffersForYou">Recommended Offers For You</string>
    <string name="Budget">Budget</string>
    <string name="off">OFF</string>
    <string name="reward">REWARDS</string>
    <string name="reviews">Reviews</string>
    <string name="experiance">Experience</string>
    <string name="COMMENT">COMMENTS</string>
    <string name="description">Description</string>
    <string name="noCommentGiven">No comments given</string>
    <string name="rateYourExpAndWriteCommsToGetMorePoints">RATE YOUR EXPERIENCE AND COMMENT TO EARN MORE POINTS</string>
    <string name="totalBill">TOTAL BILL</string>
    <string name="totalSavings">TOTAL SAVINGS</string>
    <string name="viewReceipt">VIEW RECEIPT</string>
    <string name="pleaseEnterStoreCode">Please enter Store Code</string>
    <string name="pleaseCompleteFamily">Please create a family card from profile section.</string>
    <string name="emptyMsg">Empty message!</string>
    <string name="paymentDoneSuccessfully">Payment done successfully!</string>
    <string name="selectstore">Please select a store to raise a complain</string>
    <string name="selectbranch">Please select a branch!</string>
    <string name="complainsuccess">Complaint sent successfully!</string>
    <string name="startwithdoterrormessage">You cannot start ammount with \".\"</string>
    <string name="pleaseSelectDate">Please select date</string>
    <string name="pleaseSelectTime">Please select time.</string>
    <string name="pleaseSelectGuests">Please select no. of guests</string>
    <string name="orderNow">ORDER NOW</string>
    <string name="redeemNow">REDEEM NOW</string>
    <string name="favoutites">FAVORITES</string>
    <string name="branches">BRANCHES</string>
    <string name="promotions">PROMOTIONS</string>
    <string name="offers">OFFERS</string>
    <string name="riseAComplaint">Raise A Complaint</string>
    <string name="writeComments">WRITE COMMENTS</string>
    <string name="bringBefore">Bill Before %</string>
    <string name="billAfter">Bill After %</string>
    <string name="totalSaved">TOTAL SAVED</string>
    <string name="uploadReceipt">UPLOAD RECEIPT</string>
    <string name="upload">UPLOAD</string>
    <string name="pleaseAskMerchantToEnterCode">Please ask merchant to enter code</string>
    <string name="selectstore1">SELECT STORE</string>
    <string name="selectBranch1">SELECT BRANCH</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="offerRedeemedSuccessfully">OFFER REDEEMED SUCCESSFULLY!</string>
    <string name="rateYourExperience">RATE YOUR EXPERIENCE</string>
    <string name="skipForNow">Skip for now</string>
    <string name="offerRedeemed">OFFER REDEEMED</string>
    <string name="successfully">SUCCESSFULLY</string>
    <string name="registerationDone">REGISTRATION DONE</string>
    <string name="YouWillReceiveAnSmsWithYourPasswordWithIn24WorkingHours">YOU WILL RECEIVE AN SMS WITH YOUR PASSWORD WITHIN 24 WORKING HOURS</string>
    <string name="welcome">WELCOME</string>
    <string name="PLEASETAKEAMOMENTTOCOMPLETEYOURPROFILEWHILEWESETUPYOUROFFERS">PLEASE TAKE A MOMENT TO COMPLETE YOUR PROFILE, WHILE WE SET UP YOUR OFFERS!</string>
    <string name="dateOfBirth">DATE OF BIRTH</string>
    <string name="position">POSITION</string>
    <string name="viewProfile">VIEW PROFILE</string>
    <string name="updateIdImage">UPDATE ID IMAGE</string>
    <string name="selectCategoryFirst">Select category first</string>
    <string name="applyAFilterToContinue">Apply a filter to continue</string>
    <string name="inbox">INBOX</string>
    <string name="mapView">MAP VIEW</string>
    <string name="listView">LIST VIEW</string>
    <string name="pleaseInstallInstagram">Please install Instagram</string>
    <string name="pleaseInstallTwitter">Please install Twitter</string>
    <string name="IfAvailable">IF AVAILABLE</string>
    <string name="pleaseUploadID">Upload id for varification!</string>
    <string name="youAreNotRequiredToPay">You are not required to pay, please continue registeration.</string>
    <string name="whatsNew">WHAT\'S NEW</string>
    <string name="Student">STUDENT</string>
    <string name="corporate">CORPORATE</string>
    <string name="areYouSureYouWantToExit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">HOME</string>
    <string name="wishList">WISHLIST</string>
    <string name="logout">LOG OUT</string>
    <string name="alert">Confirm</string>
    <string name="comming_soon">COMING SOON</string>
    <string name="rate">Please rate!</string>
    <string name="offer">OFFER</string>
    <string name="details">DETAILS</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="additionalCard">Additional Card</string>
    <string name="pleasepaytoregister">Please pay first to register!</string>
    <string name="uploaded">UPLOADED</string>
    <string name="next">Next</string>
    <string name="register">REGISTER</string>
    <string name="fillEmptyField">Fill empty fields.</string>
</resources>