<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_background"></LinearLayout>

    <TextView
        android:textSize="14sp"
        android:id="@+id/txt_view_usage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/viewAsGuest"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/change_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="عربى"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/testClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@color/black"
                    android:elevation="2sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_login_screen_logo" />

                <EditText
                    android:id="@+id/userName"
                    android:inputType="textWebEmailAddress"
                    style="@style/GreyEditText"
                    android:layout_marginTop="25dp"
                    android:textAlignment="viewStart"
                    android:digits="@string/emaildigits"
                    android:hint="@string/email"
                    android:textColorHint="@color/black" />

                <LinearLayout
                    style="@style/GreyEditText"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:textSize="14sp"
                        android:id="@+id/password"
                        style="@style/NormalText"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:maxLength="20"
                        android:textAlignment="viewStart"
                        android:hint="@string/password"
                        android:textColorHint="@color/black"
                        android:inputType="textPassword"/>

                    <TextView
                        android:textColor="@color/dark_grey"
                        android:id="@+id/forgetpassword"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:text="@string/forgetPassword" />
                </LinearLayout>

                <CheckBox
                    android:layout_marginStart="-5dp"
                    android:textColor="@color/dark_grey"
                    android:id="@+id/login_saved_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="start"
                    android:text="@string/savePassword"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/BlackBtn"
                        android:text="@string/login" />

                    <Button
                        android:id="@+id/registerNowBtn"
                        style="@style/BlackBorderBtn"
                        android:layout_marginTop="15dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</LinearLayout>